fixed #136 improved bottom spacing hidden row-footer, needs to be removed from everywhere

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -330,6 +330,8 @@ $debug-field-background-odd: rgba(0, 135, 255, 0.1) !default;
 $debug-field-title-background: rgba(255, 165, 0, 0.4) !default;
 
 /*
+*/
+
 .repeater-field:nth-child(even) {
     background: $debug-field-background-even !important;
 }
@@ -338,7 +340,6 @@ $debug-field-title-background: rgba(255, 165, 0, 0.4) !default;
     background: $debug-field-background-odd !important;
 }
 
-.repeater-row-footer,
 .customize-control-title,
 .repeater-field-epsilon-slider .slider-container,
 .epsilon-controller-image-container .actions {
@@ -350,4 +351,3 @@ $debug-field-title-background: rgba(255, 165, 0, 0.4) !default;
 .repeater-row-hide {
     background: $debug-field-title-background;
 }
-*/
